--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project627",
+  "name": "music163",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Jordonwang <jordonwang1204@outlook.com>",
@@ -13,6 +13,7 @@
     "axios": "^0.16.2",
     "element-ui": "^1.4.0",
     "node-sass": "^4.5.3",
+    "stylus": "^0.54.5",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
@@ -29,7 +30,7 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.4",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -51,8 +52,9 @@
     "scss-loader": "0.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.18.2",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
-    "vue-awesome-swiper": "^2.5.4",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
@@ -70,5 +72,18 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jordonwang/Music163.git"
+  },
+  "keywords": [
+    "music"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jordonwang/Music163/issues"
+  },
+  "homepage": "https://github.com/Jordonwang/Music163#readme"
 }
