--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
+    "vue-scroller": "^2.2.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
